--- a/JewelryPOS.App/Views/AddProductView.xaml
+++ b/JewelryPOS.App/Views/AddProductView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="JewelryPOS.App.Views.AddProductView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Yeni Ürün Ekle" Height="850" Width="600"
+        Title="Yeni Ürün Ekle" Height="860" Width="600"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         Background="#fafafa">
@@ -27,13 +27,13 @@
             <!-- Kategori -->
             <RowDefinition Height="Auto"/>
             <!-- Açıklama -->
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="100"/>
             <!-- Butonlar için sabit yükseklik -->
         </Grid.RowDefinitions>
 
         <!-- Başlık -->
         <TextBlock Grid.Row="0" Text="Yeni Ürün Ekle" FontSize="24" FontWeight="Bold" 
-                   HorizontalAlignment="Center" Margin="0,0,0,30" FontFamily="Segoe UI"/>
+                   HorizontalAlignment="Center" Margin="0,0,0,10" FontFamily="Segoe UI"/>
 
         <!-- Ürün Adı -->
         <Grid Grid.Row="1" Margin="0,10,0,10">
@@ -89,8 +89,24 @@
                      Style="{StaticResource MaterialTextBox}"/>
         </Grid>
 
-        <!-- Stok -->
+        <!-- Kur Seçimi -->
         <Grid Grid.Row="5" Margin="0,10,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="300"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Column="0">
+                <Label Content="Kur:" FontWeight="Bold" FontSize="16" FontFamily="Segoe UI"/>
+                <TextBlock Text="*" Foreground="Red" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            </StackPanel>
+            <ComboBox Grid.Column="1" Width="300" Height="40" 
+              ItemsSource="{Binding Currencies}" 
+              SelectedItem="{Binding SelectedCurrency}" 
+              Style="{StaticResource MaterialComboBox}"/>
+        </Grid>
+
+        <!-- Stok -->
+        <Grid Grid.Row="6" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -105,7 +121,7 @@
         </Grid>
 
         <!-- Karat -->
-        <Grid Grid.Row="6" Margin="0,10,0,10">
+        <Grid Grid.Row="7" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -117,7 +133,7 @@
         </Grid>
 
         <!-- Ağırlık -->
-        <Grid Grid.Row="7" Margin="0,10,0,10">
+        <Grid Grid.Row="8" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -129,7 +145,7 @@
         </Grid>
 
         <!-- Kategori Seçimi -->
-        <Grid Grid.Row="8" Margin="0,10,0,10">
+        <Grid Grid.Row="9" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -146,7 +162,7 @@
         </Grid>
 
         <!-- Açıklama -->
-        <Grid Grid.Row="9" Margin="0,10,0,10">
+        <Grid Grid.Row="10" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -159,7 +175,7 @@
         </Grid>
 
         <!-- Butonlar -->
-        <StackPanel Grid.Row="10" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,5,-30">
+        <StackPanel Grid.Row="11" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,5,-180">
             <Button Content="İptal" Width="140" Height="50" Margin="0,0,10,0" 
                     Command="{Binding CancelCommand}" 
                     Style="{StaticResource CancelButtonStyle}"/>
