--- a/JewelryPOS.App/Views/EditProductView.xaml
+++ b/JewelryPOS.App/Views/EditProductView.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="JewelryPOS.App.Views.EditProductView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Ürün Düzenle" Height="850" Width="600"
+        Title="Ürün Düzenle" Height="860" Width="600"
         WindowStartupLocation="CenterScreen"
-        ResizeMode="CanResize"
+        ResizeMode="NoResize"
         Background="#fafafa">
     <Grid Margin="40">
         <Grid.RowDefinitions>
@@ -27,13 +27,13 @@
             <!-- Kategori -->
             <RowDefinition Height="Auto"/>
             <!-- Açıklama -->
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="100"/>
             <!-- Butonlar -->
         </Grid.RowDefinitions>
 
         <!-- Başlık -->
         <TextBlock Grid.Row="0" Text="Ürün Düzenle" FontSize="24" FontWeight="Bold" 
-                   HorizontalAlignment="Center" Margin="0,0,0,30" FontFamily="Segoe UI"/>
+                   HorizontalAlignment="Center" Margin="0,0,0,10" FontFamily="Segoe UI"/>
 
         <!-- Ürün Adı -->
         <Grid Grid.Row="1" Margin="0,10,0,10">
@@ -89,8 +89,23 @@
                      FontFamily="Segoe UI" Padding="8"/>
         </Grid>
 
-        <!-- Stok -->
+        <!-- Kur Seçimi -->
         <Grid Grid.Row="5" Margin="0,10,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="300"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Column="0">
+                <Label Content="Kur:" FontWeight="Bold" FontSize="16" FontFamily="Segoe UI"/>
+            </StackPanel>
+            <ComboBox Grid.Column="1" Width="300" Height="40" FontSize="16" VerticalContentAlignment="Center"
+              ItemsSource="{Binding Currencies}" 
+              SelectedItem="{Binding SelectedCurrency}" 
+              FontFamily="Segoe UI"/>
+        </Grid>
+
+        <!-- Stok -->
+        <Grid Grid.Row="6" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -105,7 +120,7 @@
         </Grid>
 
         <!-- Karat -->
-        <Grid Grid.Row="6" Margin="0,10,0,10">
+        <Grid Grid.Row="7" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -117,7 +132,7 @@
         </Grid>
 
         <!-- Ağırlık -->
-        <Grid Grid.Row="7" Margin="0,10,0,10">
+        <Grid Grid.Row="8" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -129,7 +144,7 @@
         </Grid>
 
         <!-- Kategori Seçimi -->
-        <Grid Grid.Row="8" Margin="0,10,0,10">
+        <Grid Grid.Row="9" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -145,7 +160,7 @@
         </Grid>
 
         <!-- Açıklama -->
-        <Grid Grid.Row="9" Margin="0,10,0,10">
+        <Grid Grid.Row="10" Margin="0,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
@@ -157,7 +172,7 @@
         </Grid>
 
         <!-- Butonlar -->
-        <StackPanel Grid.Row="10" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,-5,-30">
+        <StackPanel Grid.Row="11" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,5,-180">
             <Button Content="İptal" Width="140" Height="50" Margin="10" Command="{Binding CancelCommand}" 
                     Style="{StaticResource CancelButtonStyle}"/>
             <Button Content="Kaydet" Width="140" Height="50" Margin="10" Command="{Binding SaveProductCommand}" 
